# fluffy-eureka

./: .gitignore  README.md
autogen/: .gitignore  OAI_CONFIG_LIST.json  litellm_uuid.txt  t001.py  t002.py  t003.py  test2.py
clojure/: hello.clj
clojurescript/: .gitignore  t001.cljs
elisp/: t001.el
hip/: .gitignore  env-info.sh  t001.cc  t002.cc  t003.cc  t004.cc  t005.cc
huggingface/: Baichuan2-13B-Chat.py  Wizard-Vicuna-13B-Uncensored.py  Wizard-Vicuna-30B-Uncensored-GPTQ.py  WizardLM-1.0-Uncensored-Llama2-13B-GPTQ.py  bc.py  bluelm-vivo.py  codegeex2-6b.py  download_model.py  foo.py  rwkv-raven-7b.py  t003.py  t004.py  t005.py  t006.py
langchain/: autollm-001.py  langchain-001.py  langchain-002.py  langchain-003.py  langchain-004.py  llamaindex-001.py  llamaindex-002.py
lisp/: t002.lisp  t003.lisp  t004.lisp  t005.lisp  t006.lisp  t007.lisp  t008.lisp  t009.lisp  t010.lisp  t011.lisp  t012.lisp
litellm/: t001.py
mlc/: t001.py
mojo/: add.mojo  hello.mojo  let_var.mojo  struct.mojo
prolog/: foo.pl
python/: ai_test_001.py  ollama.py  rename_p.py  t001.py  test-codegeex.py  test-continue.py
pytorch/: README.md
rag/: haystack-001.py  haystack-002.py  llamaindex-001.py  llamaindex-002.py
rocm/: README.md  d001.sh  d002.sh  t002.py
rust/ollama-rs/: Cargo.toml
rust/ollama-rs/src/: main.rs
rust/rust-power-tools/chapter005002/: Cargo.toml
rust/rust-power-tools/chapter005002/function-like-compse-macro/: Cargo.toml
rust/rust-power-tools/chapter005002/function-like-compse-macro/src/: lib.rs
rust/rust-power-tools/chapter005002/src/: main.rs
(+90 files in other folders)
