[package]
name = "ollama-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ollama-rs = {version = "0.1.4"}
reqwest = { version = "0.11.22", default-features = false }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1", features = ["full"]}
tokio-stream = { version = "0.1.14"}
