workspace = { members = ["function-like-compse-macro"] }
[package]
name = "chapter005002"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
function-like-compse-macro ={ path = "./function-like-compse-macro"}